fix dark mode toggle unicode

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -293,7 +293,7 @@ footer .list-inline .fa-stack .fa-inverse {
 
 /* Default state (when left): Display 'Dark' on the right margin */
 .slider:before {
-  content: "⬤";
+  content: "●";
   right: 10px;
 }
 
